# anyblok-mlmodels

./: .gitignore  README.md  pyproject.toml  pytest.ini  setup.py  test.cfg
anyblok_mlmodels/bloks/mlmodels/: __init__.py  mlmodels.py  prediction_models.py
anyblok_mlmodels/bloks/mlmodels/tests/: conftest.py  test_model.py
