[tool.poetry]
name = "blok-mlmodels"
version = "0.1.0"
description = "A Blok that allows to add/update/delete/use machine learning models"
authors = ["Denis Viviès <legnonpi@gmail.com>"]
license = "MPL-2.0"
packages = [
    { include = "anyblok_mlmodels" }
]

[tool.poetry.dependencies]
python = "^3.5"
psycopg2 = "^2.8"
anyblok = "^0.22.5"
anyblok_mixins = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-env = "^0.6.2"
freezegun = "^0.3.12"
scikit-learn = "^0.21.3"

[tool.poetry.scripts]
bloks = 'mlmodels=anyblok_mlmodels.bloks.mlmodels:MachineLearningModelBlok'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
